# Photon

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
include/: backend_cpu.hpp
include/cpu/: backend_cpu.hpp
include/gpu/: backend_gpu.cuh
src/: backend_cpu.cc  bindings.cc  main.cc
src/cpu/: backend_float.cc  bindings.cc  compact_array.inl  ewise_ops.inl  ndarray_core.inl  ndarray_views.inl  reduction_ops.inl  scalar_ops.inl  unary_ops.inl  view_helpers.inl
src/gpu/: backend_float.cu  bindings.cu  compact_array_manual.inl  ndarray_core.inl  ndarray_core_gpu.inl  ndarray_view_gpu.inl
tests/: test_backend_cpu.py  test_backend_gpu.py
